--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.10.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "mongodb": "^6.18.0",
@@ -19,6 +21,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
+    "react-toastify": "^11.0.5",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
