--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.16.5",
     "next": "15.4.4",
     "next-auth": "^5.0.0-beta.29",
+    "next-intl": "^4.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
