--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
+    "framer-motion": "^12.23.12",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.5",
     "next": "15.4.4",
